--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -185,7 +185,7 @@ jobs:
     output_mapping:
       updated-bbl-state: updated-bbl-state
     params:
-      BBL_CONFIG_DIR: ci/customisation
+      BBL_CONFIG_DIR: ci/customisations
       BBL_ENV_NAME: jenkins-boshrelease
       BBL_GCP_REGION: ((gcp.region))
       BBL_GCP_SERVICE_ACCOUNT_KEY: ((gcp.key))
