--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -42,8 +42,8 @@ resources:
   type: git
   source:
     branch: master
-    uri: https://github.com/garethjevans/concourse-tasks.git
-    tag_filter: "v1.0"
+    uri: ((finkit-concourse-tasks.uri))
+    private_key: ((finkit-concourse-tasks.key))
 - name: jenkins-boshrelease
   type: git
   source:
