--- a/jenkins.yml
+++ b/jenkins.yml
@@ -15,7 +15,7 @@ instance_groups:
         agent:
           password: ((jenkins_agent_password))
         server:
-          address: http://localhost:8080/
+          address: ((jenkins_server_url))
   networks:
   - name: default
   stemcell: default
