--- a/ci/tasks/test-jenkins.yml
+++ b/ci/tasks/test-jenkins.yml
@@ -28,10 +28,10 @@ run:
     popd
 
     export INSTALLED_PLUGINS_FILE_PATH="${PWD}/${INSTALLED_PLUGINS_FILE_PATH_SUFFIX}"
-    cp -R devtools-tests/jenkins /go/src/
+    cp -R devtools-tests /go/src/
     sleep 10
 
-    pushd /go/src/jenkins
+    pushd /go/src
       for i in ${TEST_TAGS//,/ }
       do
         TAGS_STRING="${TAGS_STRING} -t $i"
@@ -39,5 +39,5 @@ run:
 
       go get github.com/DATA-DOG/godog/cmd/godog
       set -e
-      godog $TAGS_STRING
+      godog $TAGS_STRING features/**/*.feature
     popd
