--- a/ci/tasks/test-jenkins.yml
+++ b/ci/tasks/test-jenkins.yml
@@ -32,12 +32,7 @@ run:
     sleep 10
 
     pushd /go/src
-      for i in ${TEST_TAGS//,/ }
-      do
-        TAGS_STRING="${TAGS_STRING} -t $i"
-      done
-
       go get github.com/DATA-DOG/godog/cmd/godog
       set -e
-      godog $TAGS_STRING features/**/*.feature
+      godog $TEST_TAGS features/**/*.feature # See godog --help, to understand how to apply tags.
     popd
