--- a/ci/tasks/test-jenkins.yml
+++ b/ci/tasks/test-jenkins.yml
@@ -34,9 +34,10 @@ run:
     pushd /go/src
       go get github.com/DATA-DOG/godog/cmd/godog
       set -e
-      TAGS_STRING=""
-      if [[ -n "$TEST_TAGS" ]]; then
-        TAGS_STRING="-t $TEST_TAGS"
+      FEATURES_PATH="features/**/*.feature"
+      if [[ -z "$TEST_TAGS" ]]; then
+        godog $FEATURES_PATH
+      else
+        godog -t "$TEST_TAGS" $FEATURES_PATH # See godog --help, to understand how to apply tags.
       fi
-      godog "$TAGS_STRING" features/**/*.feature # See godog --help, to understand how to apply tags.
     popd
