--- a/jenkins.yml
+++ b/jenkins.yml
@@ -31,6 +31,7 @@ instance_groups:
         slave:
           executors: 2
           labels: build
+          type: build
           master_password: ((jenkins_agent_password))
           master_username: agent
           mode: exclusive
