Add JDK tool plugin

--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -58,6 +58,10 @@ jenkins/plugins-201806272047.zip:
   size: 219518386
   object_id: 29b8f3b0-4fbb-4bd5-4ecd-650aeefe5cd5
   sha: 3a087032e66efc7a7c6d2a22cbac3000f5a9c544
+jenkins/plugins-201807101741.zip:
+  size: 219587315
+  object_id: 8e8e3d5e-5e35-4379-72ad-745f2e2826e0
+  sha: 7987c77ddc449b5a4b48e5df640d7a10e5d9cd5f
 jenkins/swarm-client-3.6.jar:
   size: 1620623
   object_id: 7960ab0b-6580-41ce-5139-43ebd3b390fa
