--- a/jenkins.yml
+++ b/jenkins.yml
@@ -36,6 +36,13 @@ instance_groups:
           master_username: agent
           mode: exclusive
           private_key: ((jenkins_slave_ssh.private_key))
+  - name: docker
+    release: docker
+    properties:
+      tcp_address: 0.0.0.0
+      tls_cacert: "((docker-tls.ca))"
+      tls_cert: "((docker-tls.certificate))"
+      tls_key: "((docker-tls.private_key))"
   networks:
   - name: default
   stemcell: default
@@ -44,6 +51,10 @@ instance_groups:
 releases:
 - name: jenkins
   version: latest
+- name: docker
+  version: 32.0.0
+  url: https://github.com/cloudfoundry-incubator/docker-boshrelease/releases/download/v32.0.0/docker-32.0.0.tgz
+  sha1: f192296243e68150ae66656fc9134a2b2a023184
 
 stemcells:
 - alias: default
@@ -57,6 +68,18 @@ update:
   update_watch_time: 15000-300000
 
 variables:
+- name: docker-ca
+  type: certificate
+  options:
+    is_ca: true
+    common_name: dockerCA
+- name: docker-tls
+  type: certificate
+  options:
+    ca: docker-ca
+    common_name: docker
+    extended_key_usage:
+    - client_auth
 - name: jenkins_admin_password
   type: password
 - name: jenkins_agent_password
