--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -116,21 +116,6 @@ resources:
     initial_version: 0.0.0
     key: jenkins.version
 
-groups:
-- name: create
-  jobs:
-  - set-pipeline
-  - setup-infrastructure
-  - create-dev-release
-  - test-jenkins
-  - prerelease-patch
-  - prerelease-minor
-  - prerelease-major
-  - release-final
-- name: destroy
-  jobs:
-  - destroy-bosh
-
 jobs:
 - name: set-pipeline
   plan:
@@ -255,28 +240,6 @@ jobs:
               deployment_name: *deployment-name
   <<: *slack-alert
 
-- name: destroy-bosh
-  serial_groups:
-  - bbl
-  plan:
-  - aggregate:
-    - get: bbl-state
-    - get: cf-deployment-concourse-tasks
-  - task: bbl-destroy
-    file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-    input_mapping:
-      bbl-state: bbl-state
-    output_mapping:
-      updated-bbl-state: updated-bbl-state
-    params:
-      BBL_GCP_SERVICE_ACCOUNT_KEY: ((gcp.key))
-    ensure:
-      put: bbl-state
-      params:
-        repository: updated-bbl-state
-        rebase: true
-  <<: *slack-alert
-
 - name: release-final
   serial_groups:
   - github-release
@@ -353,4 +316,30 @@ jobs:
         tag_prefix: v
         globs:
         - final-jenkins-boshrelease-tarball/*.tgz
+  <<: *slack-alert
+
+- name: destroy-bosh
+  serial_groups:
+  - bbl
+  plan:
+  - aggregate:
+    - get: bbl-state
+    - get: cf-deployment-concourse-tasks
+    - get: jenkins-boshrelease
+      trigger: true
+      passed:
+      - release-final
+  - task: bbl-destroy
+    file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
+    input_mapping:
+      bbl-state: bbl-state
+    output_mapping:
+      updated-bbl-state: updated-bbl-state
+    params:
+      BBL_GCP_SERVICE_ACCOUNT_KEY: ((gcp.key))
+    ensure:
+      put: bbl-state
+      params:
+        repository: updated-bbl-state
+        rebase: true
   <<: *slack-alert
