--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -130,6 +130,8 @@ jobs:
         config_file: jenkins-boshrelease/ci/pipeline.yml
         vars_files:
         - read-snapshot-versions/initial-versions.yml
+    get_params:
+      skip_download: true
   <<: &slack-alert
     on_failure:
       put: slack-alert
@@ -138,7 +140,6 @@ jobs:
         username: ((slack.user))
         text: "<((concourse-auth.target))/teams/((concourse-auth.team))/pipelines/${BUILD_PIPELINE_NAME}/jobs/${BUILD_JOB_NAME}|${BUILD_PIPELINE_NAME}/${BUILD_JOB_NAME}>: ${BUILD_ID} - [Failed]"
         icon_emoji: ":fire:"
-
 - name: create-dev-release
   plan:
   - aggregate:
@@ -149,6 +150,8 @@ jobs:
     file: jenkins-boshrelease/ci/tasks/create-dev-release.yml
   - put: jenkins-boshrelease-tarball
     params: { file: jenkins-boshrelease-tarball/dev-release.tgz }
+    get_params:
+      skip_download: true    
   <<: *slack-alert
 
 - name: test-jenkins
@@ -258,6 +261,8 @@ jobs:
         tag_prefix: v
         globs:
         - final-jenkins-boshrelease-tarball/*.tgz
+      get_params:
+        skip_download: true        
   <<: *slack-alert
 
 - name: prerelease-major
@@ -276,6 +281,8 @@ jobs:
       file: jenkins-boshrelease/ci/tasks/create-final-release.yml
     - put: github-prerelease
       params: *put-github-release-params
+      get_params:
+        skip_download: true
   <<: *slack-alert
 
 - name: prerelease-minor
@@ -311,4 +318,6 @@ jobs:
         tag_prefix: v
         globs:
         - final-jenkins-boshrelease-tarball/*.tgz
+      get_params:
+        skip_download: true   
   <<: *slack-alert
