--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -75,10 +75,10 @@ resources:
     bucket: ((buildtools-release-tarballs.bucket))
     json_key: ((prod-build-storage-google-key))
     regexp: jenkins-boshrelease/jenkins-boshrelease-v(.*).tgz
-- name: warden-stemcell
+- name: stemcell
   type: bosh-io-stemcell
   source:
-    name: bosh-warden-boshlite-ubuntu-trusty-go_agent
+    name: bosh-google-kvm-ubuntu-trusty-go_agent
 - name: github-prerelease
   type: github-release
   source:
@@ -170,7 +170,7 @@ jobs:
       passed:
       - create-dev-release
       trigger: true
-    - get: warden-stemcell
+    - get: stemcell
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
     input_mapping:
@@ -201,7 +201,7 @@ jobs:
       releases:
       - jenkins-boshrelease-tarball/dev-release.tgz
       stemcells:
-      - warden-stemcell/stemcell.tgz
+      - stemcell/stemcell.tgz
       vars:
         deployment_name: *deployment-name
   - task: test-jenkins
