--- a/ci/customisations/cloud-config/cloud-config.yml
+++ b/ci/customisations/cloud-config/cloud-config.yml
@@ -34,11 +34,12 @@ networks:
   - range: ((internal_cidr))
     gateway: ((internal_gw))
     azs: [z1, z2, z3]
-    dns: [8.8.8.8]
+    dns: [8.8.8.8, 8,8.4.4]
     cloud_properties:
       network_name: ((network))
       subnetwork_name: ((subnetwork))
-      ephemeral_external_ip: true
+      ephemeral_external_ip: false
+      tags: [internal, no-ip]
 - name: vip
   type: vip
 
