--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -12,6 +12,7 @@ resource_types:
   type: docker-image
   source:
     repository: concourse/concourse-pipeline-resource
+    tag: 3
 - name: google-cloud-storage
   type: docker-image
   source:
