--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -58,6 +58,10 @@ jenkins/plugins-201807101741.zip:
   size: 219587315
   object_id: 8e8e3d5e-5e35-4379-72ad-745f2e2826e0
   sha: 7987c77ddc449b5a4b48e5df640d7a10e5d9cd5f
+jenkins/plugins-201808291436.zip:
+  size: 216107572
+  object_id: 1579998d-c8d1-449f-556d-dc88bf9f92b9
+  sha: 03b9a449f830ac50c1a762d4b9690076268c6978
 jenkins/swarm-client-3.6.jar:
   size: 1620623
   object_id: 7960ab0b-6580-41ce-5139-43ebd3b390fa
