--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -62,6 +62,10 @@ jenkins/plugins-201809060910.zip:
   size: 216192717
   object_id: 80e165bf-fdb5-42b1-61af-a44c0b67713f
   sha: 61b97db3d1a277bf799221b6f42bf1b5e414ebfd
+jenkins/plugins-201809191552.zip:
+  size: 216193776
+  object_id: 19dbc272-184e-40e0-47c3-4b82cd57f120
+  sha: 592b3bc7fc56433f4b0b840e7a57fce86205b15e
 jenkins/swarm-client-3.6.jar:
   size: 1620623
   object_id: 7960ab0b-6580-41ce-5139-43ebd3b390fa
