--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -163,6 +163,7 @@ jobs:
     - get: bbl-state
     - get: concourse-tasks
     - get: cf-deployment-concourse-tasks
+      trigger: true
     - get: jenkins-boshrelease
       passed:
       - create-dev-release
