--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -117,6 +117,20 @@ resources:
     initial_version: 0.0.0
     key: jenkins.version
 
+groups:
+- name: release
+  jobs:
+  - set-pipeline
+  - create-dev-release
+  - test-jenkins
+  - release-final
+  - prerelease-major
+  - prerelease-minor
+  - prerelease-patch
+- name: destroy
+  jobs:
+  - destroy-infrastructure
+
 jobs:
 - name: set-pipeline
   plan:
@@ -322,4 +336,23 @@ jobs:
         - final-jenkins-boshrelease-tarball/*.tgz
       get_params:
         skip_download: true   
+  <<: *slack-alert
+
+- name: destroy-infrastructure
+  plan:
+  - get: bbl-state
+  - get: cf-deployment-concourse-tasks
+  - task: bbl-destroy
+    file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
+    input_mapping:
+      bbl-state: bbl-state
+    output_mapping:
+      updated-bbl-state: updated-bbl-state
+    params:
+      BBL_GCP_SERVICE_ACCOUNT_KEY: ((gcp.key))
+    ensure:
+      put: bbl-state
+      params:
+        repository: updated-bbl-state
+        rebase: true
   <<: *slack-alert
