--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -231,7 +231,7 @@ jobs:
       JENKINS_HOST: "http://localhost:8080"
       JENKINS_PASSWORD_CREDHUB_PATH: "/bosh-jenkins-boshrelease/jenkins/jenkins_admin_password"
       JENKINS_TOKEN: ((jenkins_admin_password))
-      JENKINS_USER: administrator
+      JENKINS_USERNAME: administrator
       TEST_TAGS: "@unit && @jenkins"
   <<: *slack-alert
 
