--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -12,7 +12,7 @@ resource_types:
   type: docker-image
   source:
     repository: concourse/concourse-pipeline-resource
-    tag: 1
+    tag: "1.0.0"
 - name: google-cloud-storage
   type: docker-image
   source:
